.opsera-opseravote1/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opseravote1-dev
  labels:
    app.kubernetes.io/name: opseravote1
    app.kubernetes.io/part-of: opseravote1
    environment: dev
    tenant: opsera
